fix(ui): adjust transition duration for SelectThemeButton and wrap ArticleAppearanceButton in TransitionFade

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-    --font-icon: none;
+  --font-icon: none;
 }
 
-[class*=blur], .dark [class*=blur] {
-    background-color: transparent !important;
-} 
+[class*='blur'],
+.dark [class*='blur'] {
+  background-color: transparent !important;
+}
